# LanggraphGUI

./: README.md  hitl_langgraph.ipynb  langgraph_asyncio.py  main.py  pyproject.toml
sotades/langgraph/: hitl_langgraph.py  i_langgraph.py  langgraph_thread.py  state.py  system_message.txt
sotades/langgraph/test/: test_hitl_langgraph.py
sotades/xml/: IDoc 582206.xml  IDoc 582206_transormed.xml  INVOIC D96A.xsd  ZTELINVOIC.INVOIC02.ZTELINVOIC02.xsd  Z_I149_TELEMA_INVOIC.xsl
